Fix invisible headers

--- a/styles/header.css
+++ b/styles/header.css
@@ -139,7 +139,7 @@
     }
 }
 
-@media screen and (width > 620px) {
+@media screen and (min-width: 621px) {
     .menu {
         position: static;
         height: auto;
